--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -4,3 +4,11 @@ body {
     font-size: 14px;
     color: #333;
 }
+
+.card{
+    background-color: white;
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: 0 0 12px rgba(0, 0, 0, .12)
+}
+
